--- a/src/stylesheets/scss/_base.scss
+++ b/src/stylesheets/scss/_base.scss
@@ -16,6 +16,7 @@ body {
 
 p, ul, ol, blockquote {
   line-height: 1.4;
+  text-align: left;
 }
 
 a {
